--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,12 +1,11 @@
 /***** Shared header and footer styles *****/
 .homeHeaderFooter {
-  background-color: #3BA4DB;
+  background-color: #3ba4db;
   color: white;
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
 }
-
 
 /***** Header *****/
 #homeHeader {
@@ -18,7 +17,6 @@
   height: 24px;
 }
 
-
 /***** Tools *****/
 #homeTools {
   padding-top: 30px;
@@ -26,7 +24,7 @@
 
 #homeTools .bs-card {
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
-  transition: box-shadow .2s;
+  transition: box-shadow 0.2s;
   text-decoration: none;
   margin-bottom: 30px;
   flex-grow: 0;
@@ -42,7 +40,7 @@
 
 #homeTools .bs-card-title {
   font-size: 1rem;
-  color: #3BA3DA;
+  color: #3ba3da;
   margin-bottom: 4px;
   letter-spacing: unset;
   line-height: 1.2;
@@ -51,9 +49,8 @@
 #homeTools .bs-card-text {
   font-size: 14px;
   line-height: 1.5;
-  color: #323C5A;
+  color: #323c5a;
 }
-
 
 /***** Footer *****/
 #homeFooter {
@@ -65,7 +62,6 @@
 #homeFooter a:hover {
   text-decoration: underline;
 }
-
 
 /***** Responsive *****/
 @media (min-width: 576px) {
@@ -108,4 +104,3 @@
     margin-bottom: 60px;
   }
 }
-
