--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -26,7 +26,6 @@ p {
 /***** High level *****/
 .outerbox {
   width: 100%;
-  min-width: 300px;
   max-width: 768px;
   margin: 0 auto;
 }
@@ -334,6 +333,13 @@ a.kg-bg-blue:hover {
 }
 
 /***** Responsive *****/
+@media screen and (min-width: 320px) {
+  #tool-navigation .button {
+    width: 100px;
+    font-size: 14.4px;
+  }
+}
+
 @media screen and (min-width: 440px) {
   .stepHeading h1,
   h4 {
