--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -333,10 +333,9 @@ a.kg-bg-blue:hover {
 }
 
 /***** Responsive *****/
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 319px) {
   #tool-navigation .button {
     width: 100px;
-    font-size: 14.4px;
   }
 }
 
