GT-788: Add remote sharing
- Upgrade Angular to support ViewportScroller

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -183,8 +183,9 @@
       <!-- Cards -->
       <ng-container *ngIf="Cards">
         <div
+          attr.id="card-{{ cardIndex }}"
           class="cardContent"
-          *ngFor="let card of Cards"
+          *ngFor="let card of Cards; index as cardIndex"
           [hidden]="card.hidden"
         >
           <!-- Card Heading -->
