update sharing-modal selector to fix a lint violation

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -9,7 +9,7 @@
         <img src="assets/img/lang.png" class="langicon" /> {{ selectLan }}
         <i class="fas fa-chevron-up flip"></i>
       </span>
-      <sharing-modal [book]="selectbook"></sharing-modal>
+      <app-sharing-modal [book]="selectbook"></app-sharing-modal>
     </div>
     <div id="languageList" class="py25 ng-hide" *ngIf="language">
       <div class="mw568">
