run prettier over codebase

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -98,7 +98,7 @@
                 <span
                   dir="{{ pageGetparameters.dir }}"
                   class="ng-binding ng-scope"
-                  style="margin-bottom: 5px;"
+                  style="margin-bottom: 5px"
                 >
                   {{ item }}
                 </span>
