--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,14 +7,42 @@
   text-align: center;
 }
 
+.homeHeaderFooter.section-loading {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+}
+
 /***** Header *****/
 #homeHeader {
   font-size: 0;
 }
 
-#homeHeader img {
+#homeHeader > .bs-container > img {
   display: inline-block;
   height: 24px;
+}
+
+#homeHeader > .bs-container > .language-switcher > div.selector {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
+  justify-content: center;  
+}
+
+#homeHeader > .bs-container > .language-switcher > div.selector > img {
+  width: 16px;
+  height: 16px;
+}
+
+#homeHeader > .bs-container > .language-switcher > div.selector > span {
+  font-size: 14px;
+  margin: 0px 10px;
+}
+
+#homeHeader > .bs-container > .language-switcher > div.selector > i {
+  font-size: 12px;
 }
 
 /***** Tools *****/
@@ -63,12 +91,90 @@
   text-decoration: underline;
 }
 
+#languageSwitchModal {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0x;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#languageSwitchModal > div.modal-content {
+  margin: 5%; 
+  background: #ffffff;
+  border-radius: 6px;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+}
+
+#languageSwitchModal > div.modal-content > div.modal-close {
+  width: 100%;
+  height: 36px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+#languageSwitchModal > div.modal-content > div.modal-close > i {
+  font-size: 24px;
+  margin: 0 16px;
+  color: #000000;
+  cursor: pointer;
+  opacity: 0.25;
+  font-weight: 400;
+}
+
+#languageSwitchModal > div.modal-content > div.languages-grid {
+  height: calc(100% - 48px);
+  width: 100%;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#languageSwitchModal > div.modal-content > div.languages-grid > div.language {
+  width: calc(25% - 8px);
+  height: 36px;
+  margin: 4px 4px;
+  font-size: 13px;
+  color: #666666;
+  display: flex;
+  align-items: center;
+  padding: 0 8px;
+  white-space: nowrap;
+  overflow: hidden;
+  border-radius: 4px;
+  border: 1px solid #efefef;
+  cursor: pointer;
+}
+
+#languageSwitchModal > div.modal-content > div.languages-grid > div.language:hover {
+  background-color: rgba(0, 0, 0, 0.05);  
+}
+
 /***** Responsive *****/
 @media (min-width: 576px) {
   #homeTools .bs-card {
     flex-basis: calc(50% - 30px);
   }
 }
+@media screen and (max-width: 767px) {
+  #homeHeader .language-switcher {
+    width: 100%;
+    margin: 10px 0px -10px;
+    height: 36px;
+    font-size: 14px;
+  }
+
+  #languageSwitchModal > div.modal-content > div.languages-grid > div.language {
+    width: calc(50% - 8px);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .homeHeaderFooter {
     padding-top: 34px;
@@ -85,6 +191,19 @@
   }
   #homeTools .bs-card {
     margin-bottom: 45px;
+  }
+
+  #homeHeader .bs-container {
+    position: relative; 
+  }
+
+  #homeHeader .language-switcher {
+    position: absolute;
+    right: 14px;
+    top: 0;
+    bottom: 0;
+    font-size: 14px;
+    cursor: pointer;
   }
 }
 @media screen and (min-width: 992px) {
