--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,19 @@
 <header id="homeHeader" class="homeHeaderFooter">
   <div class="bs-container">
     <img src="assets/img/kg-logo.png" />
+    <div class="language-switcher">
+      <div
+        class="selector"
+        *ngIf="sectionReady"
+        dir="{{ dispLanguageDirection }}"
+        (click)="onSwitchLanguage()"
+      >
+        <img src="assets/img/lang_white.png" />
+        <span>{{ dispLanguageName }}</span>
+        <i class="fas fa-chevron-up flip"></i>
+      </div>
+      <i class="fas fa-spinner fa-spin" *ngIf="!sectionReady"></i>
+    </div>
   </div>
 </header>
 
@@ -27,7 +40,11 @@
   </div>
 </section>
 
-<footer id="homeFooter" class="homeHeaderFooter">
+<footer
+  id="homeFooter"
+  class="homeHeaderFooter"
+  [ngClass]="{ 'section-loading': !sectionReady }"
+>
   <div class="bs-container">
     ©1994-{{ currentYear }} Cru. All Rights Reserved.
     <a href="https://godtoolsapp.com/terms-of-use/" target="_blank"
@@ -38,3 +55,20 @@
     >.
   </div>
 </footer>
+
+<div id="languageSwitchModal" *ngIf="langSwitchOn">
+  <div class="modal-content">
+    <div class="modal-close">
+      <i class="fas fa-times" (click)="onSwitchLanguage()"></i>
+    </div>
+    <div class="languages-grid">
+      <div
+        class="language"
+        *ngFor="let lang of availableLangs"
+        (click)="onSelectLanguage(lang.code)"
+      >
+        {{ lang.name }}
+      </div>
+    </div>
+  </div>
+</div>
