--- a/src/app/page-recursive/component/calltoaction/calltoaction.component.html
+++ b/src/app/page-recursive/component/calltoaction/calltoaction.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready !(isForm$|async)">
+<ng-container *ngIf="ready && !(isForm$|async)">
   <h4 class="calltoaction mw568 indent" dir="{{ (dir$|async) }}">
     {{ actionText }}
   </h4>  
