--- a/src/app/page-recursive/component/card/card.component.html
+++ b/src/app/page-recursive/component/card/card.component.html
@@ -1,6 +1,7 @@
 <div class="cardContent" *ngIf="ready" 
   [hidden]="card.attributes.hidden"
   [ngClass]="{'hasHeading': !(card.attributes.listeners && card.attributes.dismissListeners)}">
+
   <h4
     *ngIf="!(card.attributes.listeners && card.attributes.dismissListeners)"
     class="mw568 cardHeading ng-binding"
@@ -9,11 +10,11 @@
     {{ labelText }}
   </h4>
 
-  <ng-container *ngIf="content">
-    <ng-container *ngFor="let cotentItem of content; let order = index">
-      <app-content-paragraph *ngIf="cotentItem.contentType === 'paragraph'" [item]="cotentItem"></app-content-paragraph>
-      <app-content-form *ngIf="cotentItem.contentType === 'form'" [item]="cotentItem"></app-content-form>
+  <ng-container *ngIf="content && !(isModal$|async)">
+    <ng-container *ngFor="let cotentItem of content; trackBy: trackByFn;">
+      <app-content-paragraph *ngIf="cotentItem.type === 'paragraph'" [item]="cotentItem"></app-content-paragraph>
+      <app-content-form *ngIf="cotentItem.type === 'form'" [item]="cotentItem"></app-content-form>
     </ng-container>
   </ng-container>
-  
+
 </div>
