--- a/src/app/page-recursive/component/card/card.component.css
+++ b/src/app/page-recursive/component/card/card.component.css
@@ -7,12 +7,6 @@ div.cardContent {
   margin-top: 24px;
 }
 
-/*
-div.cardContent .cardHeading,
-div.cardContent .arrayContent span:first-child,
-div.cardContent .buttonContent a,
-div.cardContent .textContent * {
-  margin-top: 0;
+:host:first-of-type > div.cardContent{
+  margin-top: 24px !important;
 }
-*/
-
