--- a/src/app/page-recursive/component/content-tabs/content-tabs.component.html
+++ b/src/app/page-recursive/component/content-tabs/content-tabs.component.html
@@ -1,3 +1,21 @@
-<p>
-  content-tabs works!
-</p>
+<ng-container *ngIf="ready && content && !(isModal$|async)">
+  <ng-container *ngFor="let tab of content; trackBy: trackByFn;">
+    <ng-container *ngIf="tab && tab.children">
+      <div class="tabContent">
+        <ng-container *ngFor="let item of tab.children">
+          <app-content-accordion *ngIf="item.type === 'accordion'" [item]="item"></app-content-accordion>
+          <app-content-animation *ngIf="item.type === 'animation'" [item]="item"></app-content-animation>
+          <app-content-button *ngIf="item.type === 'button'" [item]="item"></app-content-button>
+          <app-content-form *ngIf="item.type === 'form'" [item]="item"></app-content-form>
+          <app-content-image *ngIf="item.type === 'image'" [item]="item"></app-content-image>
+          <app-content-input *ngIf="item.type === 'input'" [item]="item"></app-content-input>
+          <app-content-link *ngIf="item.type === 'link'" [item]="item"></app-content-link>
+          <app-content-paragraph *ngIf="item.type === 'paragraph'" [item]="item"></app-content-paragraph>
+          <app-content-tabs *ngIf="item.type === 'tabs'" [item]="item"></app-content-tabs>
+          <app-content-text *ngIf="item.type === 'text'" [item]="item"></app-content-text>
+          <app-content-video *ngIf="item.type === 'video'" [item]="item"></app-content-video>
+        </ng-container>        
+      </div>
+    </ng-container>
+  </ng-container>
+</ng-container>
