hide hero heading when page has heading

--- a/src/app/page-recursive/component/tract-page/tract-page.component.css
+++ b/src/app/page-recursive/component/tract-page/tract-page.component.css
@@ -91,6 +91,14 @@ app-tract-page {
   margin-left: 12px;
 }
 
+#toolContent.hasPageHeader > app-page-hero > .stepHeading {
+  padding: 0;
+}
+
+#toolContent.hasPageHeader > app-page-hero > .stepHeading > h1 {
+  display: none;
+}
+
 @media screen and (min-width: 440px) {
   .stepHeading h1,
   h4 {
