--- a/src/app/page-recursive/component/tract-page/tract-page.component.html
+++ b/src/app/page-recursive/component/tract-page/tract-page.component.html
@@ -5,7 +5,8 @@
     [ngClass]="{
       'tc': (isFirstPage$|async) || (isLastPage$|async),
       'firstPage': (isFirstPage$|async),
-      'lastPage': (isLastPage$|async)
+      'lastPage': (isLastPage$|async),
+      'hasPageHeader': hasPageHeader
     }"
   >
 
