--- a/src/app/page-v2/component/content-link/content-link.component.html
+++ b/src/app/page-v2/component/content-link/content-link.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="ready">
-  <div class="mw568 linkContent indent">
+  <div class="linkContent indent">
     <a (click)="formAction(events)">{{ linkText }}</a>
   </div>  
 </ng-container>
