Content fallback tag & attribute support

--- a/src/app/page-v2/component/content-form/content-form.component.html
+++ b/src/app/page-v2/component/content-form/content-form.component.html
@@ -53,6 +53,10 @@
         *ngIf="item.type === 'tip'"
         [item]="item"
       ></app-training-tip>
+      <app-content-fallback
+        *ngIf="item.type === 'fallback'"
+        [item]="item"
+      ></app-content-fallback>
     </div>
   </form>
 </ng-container>
