--- a/src/app/page-v2/component/content-paragraph/content-paragraph.component.html
+++ b/src/app/page-v2/component/content-paragraph/content-paragraph.component.html
@@ -52,5 +52,9 @@
       *ngIf="item.type === 'tip'"
       [item]="item"
     ></app-training-tip>
+    <app-content-fallback
+      *ngIf="item.type === 'fallback'"
+      [item]="item"
+    ></app-content-fallback>
   </ng-container>
 </ng-container>
