--- a/src/app/page-v2/component/content-tabs/content-tabs.component.html
+++ b/src/app/page-v2/component/content-tabs/content-tabs.component.html
@@ -55,6 +55,10 @@
             *ngIf="item.type === 'tip'"
             [item]="item"
           ></app-training-tip>
+          <app-content-fallback
+            *ngIf="item.type === 'fallback'"
+            [item]="item"
+          ></app-content-fallback>
         </ng-container>
       </div>
     </ng-container>
