--- a/src/app/page-v2/component/content-animation/content-animation.component.html
+++ b/src/app/page-v2/component/content-animation/content-animation.component.html
@@ -1,1 +1,11 @@
-<p>content-animation works!</p>
+<ng-container *ngIf="ready && anmResource">
+  <div class="animation-container">
+    <lottie-animation-view
+      (click)="onAnimationClick()"
+      (animCreated)="onAnimationCreated($event)"
+      [ngClass]="{ hasEvents: hasEvents }"
+      [options]="anmOptions"
+    >
+    </lottie-animation-view>
+  </div>
+</ng-container>
