--- a/src/app/page-v2/component/tract-page/tract-page.component.css
+++ b/src/app/page-v2/component/tract-page/tract-page.component.css
@@ -255,8 +255,8 @@ div.cardContent:not(.hasHading) {
 
 @media screen and (min-width: 616px) {
 
-  div.cardContent.hasHeading > app-content-paragraph > app-content-text > p.textContent,
-  div.tabContent > app-content-paragraph > app-content-text > p.textContent {
+  div.cardContent.hasHeading app-content-text > p.textContent,
+  div.tabContent app-content-text > p.textContent {
     padding-left: 44px;
     padding-right: 44px;
   }
@@ -266,4 +266,3 @@ div.cardContent:not(.hasHading) {
     padding-right: 44px;    
   }
 }
-
