--- a/src/app/page-v2/component/modal/modal.component.html
+++ b/src/app/page-v2/component/modal/modal.component.html
@@ -1,8 +1,10 @@
 <ng-container *ngIf="ready">
   <div class="stepHeading noCounter">
-    <h1 class="ng-binding mw568" dir="{{ dir$ | async }}">
-      {{ titleText }}
-    </h1>
+    <h1
+      class="ng-binding mw568"
+      dir="{{ dir$ | async }}"
+      [innerHTML]="titleText"
+    ></h1>
   </div>
 
   <ng-container *ngIf="content">
