--- a/src/app/page-v2/component/content-input/content-input.component.html
+++ b/src/app/page-v2/component/content-input/content-input.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="ready">
-  <label [for]="name">{{ labelText }}</label>
+  <label [for]="name" [innerHTML]="labelText"></label>
   <input
     [type]="type"
     class="form-control"
