--- a/src/app/page-v2/component/page-hero/page-hero.component.html
+++ b/src/app/page-v2/component/page-hero/page-hero.component.html
@@ -1,14 +1,14 @@
 <ng-container *ngIf="ready && !(isFirstPage$ | async) && heading">
   <div class="stepHeading noCounter">
-    <h1 class="ng-binding mw568" dir="{{ dir$ | async }}">
-      {{ headingText }}
-    </h1>
+    <h1
+      class="ng-binding mw568"
+      dir="{{ dir$ | async }}"
+      [innerHTML]="headingText"
+    ></h1>
   </div>
 </ng-container>
 <ng-container *ngIf="ready && (isFirstPage$ | async) && heading">
-  <h2 class="mw568 tc firstHeading">
-    {{ headingText }}
-  </h2>
+  <h2 class="mw568 tc firstHeading" [innerHTML]="headingText"></h2>
 </ng-container>
 <ng-container *ngIf="ready && content && !(isForm$ | async)">
   <ng-container *ngFor="let cotentItem of content">
