--- a/src/app/page-v2/component/content-video/content-video.component.html
+++ b/src/app/page-v2/component/content-video/content-video.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="ready && provider === 'youtube' && videoId">
   <!-- YouTube Video Embed -->
   <div class="video-embed">
-    <iframe [src]="getCleanVideoUrl()" frameborder="0" allowfullscreen></iframe>
+    <iframe [src]="videoUrl" frameborder="0" allowfullscreen></iframe>
   </div>
   <!-- YouTube Video Embed -->
 </ng-container>
