--- a/src/app/page-v2/component/content-fallback/content-fallback.component.html
+++ b/src/app/page-v2/component/content-fallback/content-fallback.component.html
@@ -1,58 +1,58 @@
 <ng-container *ngIf="ready && content">
   <app-content-accordion
     *ngIf="content.type === 'accordion'"
-    [item]="item"
+    [item]="content"
   ></app-content-accordion>
   <app-content-animation
     *ngIf="content.type === 'animation'"
-    [item]="item"
+    [item]="content"
   ></app-content-animation>
   <app-content-button
     *ngIf="content.type === 'button'"
-    [item]="item"
+    [item]="content"
   ></app-content-button>
   <app-content-form
     *ngIf="content.type === 'form'"
-    [item]="item"
+    [item]="content"
   ></app-content-form>
   <app-content-image
     *ngIf="content.type === 'image'"
-    [item]="item"
+    [item]="content"
   ></app-content-image>
   <app-content-input
     *ngIf="content.type === 'input'"
-    [item]="item"
+    [item]="content"
   ></app-content-input>
   <app-content-link
     *ngIf="content.type === 'link'"
-    [item]="item"
+    [item]="content"
   ></app-content-link>
   <app-content-paragraph
     *ngIf="content.type === 'paragraph'"
-    [item]="item"
+    [item]="content"
   ></app-content-paragraph>
   <app-content-tabs
     *ngIf="content.type === 'tabs'"
-    [item]="item"
+    [item]="content"
   ></app-content-tabs>
   <app-content-text
     *ngIf="content.type === 'text'"
-    [item]="item"
+    [item]="content"
   ></app-content-text>
   <app-content-video
     *ngIf="content.type === 'video'"
-    [item]="item"
+    [item]="content"
   ></app-content-video>
   <app-content-spacer
     *ngIf="content.type === 'spacer'"
-    [item]="item"
+    [item]="content"
   ></app-content-spacer>
   <app-training-tip
     *ngIf="content.type === 'tip'"
-    [item]="item"
+    [item]="content"
   ></app-training-tip>
   <app-content-fallback
     *ngIf="content.type === 'fallback'"
-    [item]="item"
+    [item]="content"
   ></app-content-fallback>
 </ng-container>
