--- a/src/app/page-v2/component/tract-page/tract-page.component.html
+++ b/src/app/page-v2/component/tract-page/tract-page.component.html
@@ -17,7 +17,11 @@
       [hero]="hero"
     ></app-page-hero>
     <ng-container *ngIf="cards && cards.length && !(isModal$ | async)">
-      <app-page-card *ngFor="let card of cards" [card]="card"></app-page-card>
+      <app-page-card
+        *ngFor="let card of cards; index as cardIndex"
+        [card]="card"
+        [cardIndex]="cardIndex"
+      ></app-page-card>
     </ng-container>
     <app-page-calltoaction
       *ngIf="callToAction && !(isForm$ | async) && !(isModal$ | async)"
