Removing Adobe Analytics code (#268)
* Removing Adobe Analytics code

Also includes some auto-formatting

* Finishing Prettier formatting

Needed for PR merging

* Updating formatting with correct version of Prettier

--- a/src/app/page-v2/component/content-image/content-image.component.html
+++ b/src/app/page-v2/component/content-image/content-image.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="ready">
   <img
     class="imageContent ng-binding"
-    [ngClass]="{ firstImage: (isFirstPage$ | async) }"
+    [ngClass]="{ firstImage: isFirstPage$ | async }"
     [src]="imgResource"
   />
 </ng-container>
