--- a/src/app/page-v2/component/content-text/content-text.component.html
+++ b/src/app/page-v2/component/content-text/content-text.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="ready">
   <p
     class="mw568 textContent"
-    [ngClass]="{ firstContent: (isFirstPage$ | async) }"
+    [ngClass]="{ firstContent: isFirstPage$ | async }"
     [innerHTML]="textValue"
     dir="{{ dir$ | async }}"
   ></p>
