--- a/src/app/page-v2/component/tract-page/tract-page.component.html
+++ b/src/app/page-v2/component/tract-page/tract-page.component.html
@@ -3,8 +3,8 @@
     id="toolContent"
     [ngClass]="{
       tc: (isFirstPage$ | async) || (isLastPage$ | async),
-      firstPage: (isFirstPage$ | async),
-      lastPage: (isLastPage$ | async),
+      firstPage: isFirstPage$ | async,
+      lastPage: isLastPage$ | async,
       hasPageHeader: hasPageHeader
     }"
   >
