--- a/src/app/new-page/component/content-video/content-video.component.html
+++ b/src/app/new-page/component/content-video/content-video.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready && provider === 'youtube' && videoId">
+<ng-container *ngIf="ready && provider === 'YOUTUBE' && videoId">
   <!-- YouTube Video Embed -->
   <div class="video-embed">
     <iframe [src]="videoUrl" frameborder="0" allowfullscreen></iframe>
