--- a/src/app/new-page/component/tract-page/tract-page.component.css
+++ b/src/app/new-page/component/tract-page/tract-page.component.css
@@ -253,6 +253,10 @@ div.cardContent:not(.hasHading) {
   margin-top: 48px !important;
 }
 
+
+app-content-new-repeater > app-content-new-text {
+  margin-top: 24px
+}
 @media screen and (min-width: 616px) {
 
   div.cardContent.hasHeading app-content-new-text > p.textContent,
@@ -268,7 +272,7 @@ div.cardContent:not(.hasHading) {
 }
 
 app-page-new-hero > app-content-new-repeater > app-content-new-image:first-child {
-  margin-top: -48px;
+  margin-top: -24px;
 }
 
 div#toolContent > app-page-new-hero:first-child {
