--- a/src/app/new-page/component/modal/modal.component.html
+++ b/src/app/new-page/component/modal/modal.component.html
@@ -8,8 +8,6 @@
   </div>
 
   <ng-container *ngIf="content">
-    <app-content-new-repeater
-    [items]="content"
-    ></app-content-new-repeater>
+    <app-content-new-repeater [items]="content"></app-content-new-repeater>
   </ng-container>
 </ng-container>
