--- a/src/app/new-page/component/content-paragraph/content-paragraph.component.html
+++ b/src/app/new-page/component/content-paragraph/content-paragraph.component.html
@@ -1,5 +1,3 @@
 <ng-container *ngIf="ready && items && items.length">
-  <app-content-new-repeater
-      [items]="items"
-  ></app-content-new-repeater>
+  <app-content-new-repeater [items]="items"></app-content-new-repeater>
 </ng-container>
