--- a/src/app/new-page/component/tract-page/tract-page.component.css
+++ b/src/app/new-page/component/tract-page/tract-page.component.css
@@ -271,10 +271,18 @@ app-content-new-repeater > app-content-new-text {
   }
 }
 
+app-page-new-hero > app-content-new-image:first-child {
+  margin-top: -48px;
+}
+
 app-page-new-hero > app-content-new-repeater > app-content-new-image:first-child {
-  margin-top: -24px;
+  margin-top: -48px;
 }
 
 div#toolContent > app-page-new-hero:first-child {
   padding-top: 0px !important;
+}
+
+div#toolContent > app-page-new-hero:first-child > app-content-new-repeater > app-content-new-image:first-child {
+  margin-top: -24px;
 }
