--- a/src/app/new-page/component/tract-page/tract-page.component.html
+++ b/src/app/new-page/component/tract-page/tract-page.component.html
@@ -18,7 +18,7 @@
     ></app-page-new-hero>
     <ng-container *ngIf="cards && cards.length && (isModal$ | async) === false">
       <app-page-new-card
-        *ngFor="let card of cards; index as cardIndex"
+        *ngFor="let card of cards"
         [card]="card"
       ></app-page-new-card>
     </ng-container>
