--- a/src/app/new-page/component/content-accordion/content-accordion.component.html
+++ b/src/app/new-page/component/content-accordion/content-accordion.component.html
@@ -1,15 +1,1 @@
-<ng-container *ngIf="ready && sections">
-  <ng-container *ngFor="let section of sections; trackBy: trackByFn">
-    <div class="accordian mw568">
-      <button class="accordion-header" (click)="onClick($event)">
-        {{ section.section.header.text }}
-        <i class="far fa-chevron-right"></i>
-      </button>
-      <div class="accordion-content">
-        <app-content-new-repeater
-          [items]="section.contents"
-        ></app-content-new-repeater>
-      </div>
-    </div>
-  </ng-container>
-</ng-container>
+<!-- Content Accordion Goes Here -->
