Added support for multiselect, flow, cards, fixed some text styling, & upgraded the emoji survey.

--- a/src/app/new-page/component/content-image/content-image.component.html
+++ b/src/app/new-page/component/content-image/content-image.component.html
@@ -3,5 +3,6 @@
     class="imageContent ng-binding"
     [ngClass]="{ firstImage: isFirstPage$ | async }"
     [src]="imgResource"
+    [ngStyle]="{ width: width }"
   />
 </ng-container>
