Only allowing FIXED spacers on web

--- a/src/app/new-page/component/content-spacer/content-spacer.component.html
+++ b/src/app/new-page/component/content-spacer/content-spacer.component.html
@@ -1,2 +1,6 @@
 <!-- Content Spacer Goes Here -->
-<div class="spacer" [ngStyle]="{ 'height.px': height }"></div>
+<div
+  class="spacer"
+  *ngIf="mode !== 'AUTO'"
+  [ngStyle]="{ 'height.px': height }"
+></div>
