Removing min-height. Changing how I ensure only FIXED spacers show.

--- a/src/app/new-page/component/content-spacer/content-spacer.component.html
+++ b/src/app/new-page/component/content-spacer/content-spacer.component.html
@@ -1,6 +1,6 @@
 <!-- Content Spacer Goes Here -->
 <div
   class="spacer"
-  *ngIf="mode !== 'AUTO'"
+  *ngIf="mode === 'FIXED'"
   [ngStyle]="{ 'height.px': height }"
 ></div>
