--- a/src/app/new-page/component/content-spacer/content-spacer.component.html
+++ b/src/app/new-page/component/content-spacer/content-spacer.component.html
@@ -1,1 +1,6 @@
 <!-- Content Spacer Goes Here -->
+<div
+  class="spacer"
+  *ngIf="mode === 'FIXED'"
+  [ngStyle]="{ 'height.px': height }"
+></div>
