--- a/src/app/new-page/page.component.html
+++ b/src/app/new-page/page.component.html
@@ -4,14 +4,17 @@
   <div class="outerbox">
     <header id="toolHeader">
       <div class="header tc relative">
+        <app-sharing-modal [book]="selectedBookName"></app-sharing-modal>
+        <span class="logo">
+          <a href='/'><img src="assets/img/kg-logo-blue.png" /></a>
+        </span>
         <span
-          class="l absolute kg-gray-dark ng-binding language-selector-toggle"
+          class="kg-gray-dark ng-binding language-selector-toggle"
           (click)="onToggleLanaguageSelect()"
         >
           <img src="assets/img/lang.png" class="langicon" /> {{ selectedLang }}
           <i class="fas fa-chevron-up flip"></i>
         </span>
-        <app-sharing-modal [book]="selectedBookName"></app-sharing-modal>
       </div>
       <div id="languageList" class="py25 ng-hide" *ngIf="languagesVisible">
         <div class="mw568">
