--- a/src/app/new-page/page.component.html
+++ b/src/app/new-page/page.component.html
@@ -6,7 +6,7 @@
       <div class="header tc relative">
         <app-sharing-modal [book]="selectedBookName"></app-sharing-modal>
         <span class="logo">
-          <a href='/'><img src="assets/img/kg-logo-blue.png" /></a>
+          <a href="/"><img src="assets/img/kg-logo-blue.png" /></a>
         </span>
         <span
           class="kg-gray-dark ng-binding language-selector-toggle"
