--- a/src/app/new-page/page.component.html
+++ b/src/app/new-page/page.component.html
@@ -5,9 +5,7 @@
     <header id="toolHeader">
       <div class="header tc relative">
         <app-sharing-modal [book]="selectedBookName"></app-sharing-modal>
-        <span class="logo">
-          <a href="/"><img src="assets/img/kg-logo-blue.png" /></a>
-        </span>
+        <a href="/" class="logo"><img src="assets/img/kg-logo-blue.png" /></a>
         <span
           class="kg-gray-dark ng-binding language-selector-toggle"
           (click)="onToggleLanaguageSelect()"
