Center modal vertically

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -102,7 +102,12 @@
 }
 
 #languageSwitchModal > div.modal-content {
-  margin: 5%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
   background: #ffffff;
   border-radius: 6px;
   height: 90%;
