--- a/src/app/new-page/page.component.css
+++ b/src/app/new-page/page.component.css
@@ -1,6 +1,6 @@
 /***** Elements *****/
 html {
-    background-color: white !important;
+  background-color: white !important;
 }
 
 h1,
@@ -10,17 +10,17 @@ h4,
 h5,
 h6,
 p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 h4 {
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: 300;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 300;
 }
 
 p {
-    line-height: 24px;
+  line-height: 24px;
 }
 
 /***** High level *****/
@@ -57,6 +57,8 @@ p {
   line-height: 36px;
   padding: 12px 24px;
   cursor: pointer;
+  position: absolute;
+  left: 0;
 }
 
 .language-selector-toggle .fas {
@@ -74,6 +76,10 @@ p {
 #toolHeader {
   position: relative;
   z-index: 1;
+}
+#toolHeader .logo img {
+  height: 24px;
+  margin: 20px 0 0 0;
 }
 
 #languageList {
@@ -102,6 +108,24 @@ p {
 @media screen and (min-width: 550px) {
   #languageList ul {
     columns: 3;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  #toolHeader .logo img {
+    margin: 12px 0 0 0;
+  }
+  #toolHeader .logo {
+    display: block;
+  }
+  .language-selector-toggle {
+    position: relative;
+  }
+  .language-selector-toggle > .langicon {
+    float: none;
+  }
+  .header {
+    height: auto;
   }
 }
 
